<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".EntryDetailsBinding">

        <variable
            name="viewModel"
            type="com.mobile.diastore.feature.home.EntriesSharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="@dimen/toolbar_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/app_name"
                app:titleTextColor="@color/colorPrimaryDark" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/time_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:text="@string/time_label_text"
                    android:textAppearance="@style/Subtitle2"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hour_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:background="?selectableItemBackground"
                    android:text="@{viewModel.selectedEntry.entryHour}"
                    android:textAppearance="@style/Subtitle1"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:background="?selectableItemBackground"
                    android:text="@{viewModel.selectedEntry.entryTime}"
                    android:textAppearance="@style/Subtitle1"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/hour_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/glucose_level_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:text="@string/blood_sugar_level_label_text"
                    android:textAppearance="@style/Subtitle2"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/glucose_level_input"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/glucose_level_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/time_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:text="@={viewModel.bloodSugarLevel}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/carbs_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:text="@string/carbs_label"
                    android:textAppearance="@style/Subtitle2"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/carbs_input"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/carbs_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:maxLength="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/glucose_level_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:text="@={viewModel.carbohydratesIntake}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/insulin_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:text="@string/insulin_label"
                    android:textAppearance="@style/Subtitle2"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/insulin_input"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/insulin_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/carbs_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:text="@={viewModel.insulinIntake}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/physical_activity_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:text="@string/physical_activity_label"
                    android:textAppearance="@style/Subtitle2"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/physical_activity_input"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/physical_activity_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:inputType="number"
                    android:maxLength="4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/insulin_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="3"
                        android:maxLines="1"
                        android:text="@={viewModel.physicalActivityDuration}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/entry_moment_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:text="@string/entry_moment"
                    android:textAppearance="@style/Headline6"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/physical_activity_label" />

                <RadioGroup
                    android:id="@+id/entry_moment_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter_half"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    app:entryMoment="@{viewModel.selectedEntry.entryMomentSpecifier}"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_moment_title">

                    <RadioButton
                        android:id="@+id/before"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/before_meal"
                        android:textAppearance="@style/Subtitle2"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/after"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/after_meal"
                        android:textAppearance="@style/Subtitle2"
                        android:textColor="@color/colorPrimary" />

                </RadioGroup>

                <TextView
                    android:id="@+id/meal_type_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:text="@string/meal_type"
                    android:textAppearance="@style/Headline6"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/physical_activity_input" />

                <RadioGroup
                    android:id="@+id/meal_type_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginTop="@dimen/vertical_gutter_half"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    app:mealType="@{viewModel.selectedEntry.mealTypeSpecifier}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/meal_type_title">

                    <RadioButton
                        android:id="@+id/breakfast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breakfast"
                        android:textAppearance="@style/Subtitle2"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/lunch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lunch"
                        android:textAppearance="@style/Subtitle2"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/dinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dinner"
                        android:textAppearance="@style/Subtitle2"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/snack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/snack"
                        android:textAppearance="@style/Subtitle2"
                        android:textColor="@color/colorPrimary" />

                </RadioGroup>

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_gutter_double"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/meal_type_group" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>